--- a/css/common.css
+++ b/css/common.css
@@ -4,11 +4,54 @@
 
 body {
   margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+}
+
+.item {
+  list-style: none;
+  font-size: 24px;
+  background-color: #f6f6fe;
+  border-radius: 8px;
+  padding: 16px;
+}
+
+.item:not(:last-child) {
+  margin-bottom: 24px;
+}
+
+.item h2 {
+  margin: 0 0 16px 0;
+}
+
+.item ul {
+  padding: 0;
+}
+
+.item ul li {
+  list-style: none;
+  border: #808080 1px solid;
+  border-radius: 4px;
+  padding: 8px 16px;
+}
+
+.item ul li:not(:last-child) {
+  margin-bottom: 8px;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 auto;
+  max-width: 100%;
+  flex-wrap: wrap;
+  gap: 15px;
+  padding: 0;
+  list-style: none;
 }
