--- a/css/common.css
+++ b/css/common.css
@@ -76,7 +76,8 @@ body {
   border: 1px solid #808080;
 }
 
-.login-form button {
+.login-form button,
+button {
   box-sizing: border-box;
   width: max-content;
   min-width: 100px;
@@ -93,4 +94,15 @@ body {
   font-weight: 500;
   line-height: 24px; /* 150% */
   letter-spacing: 0.64px;
+}
+
+.widget {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+
+.widget p {
+  margin: 0;
 }
